tests/machine/x/c/join_multi.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/join_multi.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/join_multi.c:77:13: warning: implicit declaration of function ‘int_create’ [-Wimplicit-function-declaration]
   77 |   int _t4 = int_create(orders.len * customers.len * items.len);
      |             ^~~~~~~~~~
/workspace/mochi/tests/machine/x/c/join_multi.c:91:12: error: request for member ‘data’ in something not a structure or union
   91 |         _t4.data[_t5] = (resultItem){.name = c.name, .sku = i.sku};
      |            ^
/workspace/mochi/tests/machine/x/c/join_multi.c:96:6: error: request for member ‘len’ in something not a structure or union
   96 |   _t4.len = _t5;
      |      ^
/workspace/mochi/tests/machine/x/c/join_multi.c:97:28: error: invalid initializer
   97 |   list_resultItem result = _t4;
      |                            ^~~

   1: #include <stdio.h>
